--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,8 @@
     <div id="info">
         <ul>
             <li>Casa selecionada: <span id="info_casa_selecionada"/></li>
-            <li>Peca selecionada: <span id="info_peca_selecionada"/></li>
+            <li>Jogador selecionado: <span id="info_peca_selecionada"/></li>
+            <li>Qtd movimenntos: <span id="info_qtd_movimentos"/></li>
         </ul>
     </div>
     
