casas de bau. compra de carta e utilizacao unica do bau por player

--- a/client/index.html
+++ b/client/index.html
@@ -11,9 +11,11 @@
     </table>
     <div id="info">
         <ul>
-            <li>Casa selecionada: <span id="info_casa_selecionada"/></li>
-            <li>Jogador selecionado: <span id="info_peca_selecionada"/></li>
-            <li>Qtd movimenntos: <span id="info_qtd_movimentos"/></li>
+            <li><b>Casa selecionada:</b> <span id="info_casa_selecionada"/></li>
+            <li><b>Jogador selecionado:</b> <span id="info_peca_selecionada"/></li>
+            <li><b>Qtd movimenntos restantes:</b> <span id="info_qtd_movimentos"/></li>
+            <li><b>Cartas jogador:</b> <span id="info_cartas"/></li>
+            <li><b>Cartas disponíveis baú:</b> <span id="info_cartas_disponiveis"/></li>
         </ul>
     </div>
     
